# plotlib

./: CMakeLists.txt
src/: main.cpp  plot.h
